# OpenGL-vscode-environment

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: toolchain-linux.cmake  toolchain-macos.cmake  toolchain-mingw64.cmake
src/: main.cpp
